# baogia

./: .gitignore  BG Quat ngang 2026.docx  README.md  app.py  file nhap quat AMIS.xls  pyproject.toml  render.yaml  requirements.txt
src/: bill_store.py  code_extractor.py  customer_store.py  docx_processor.py  docx_utils.py  image_provider.py  mock_context.py  placeholder_filler.py  product_catalog.py  product_rows.py  xls_image_extractor.py
